--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
