--- a/package.json
+++ b/package.json
@@ -19,17 +19,10 @@
 		"jspdf": "^2.5.1",
 		"jspdf-autotable": "^3.8.3",
 		"jwt-decode": "^4.0.0",
-		"lucide-react": "^0.344.0",
 		"react": "^18.2.0",
-		"react-dnd": "^16.0.1",
-		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.2.0",
-		"react-highlight-words": "^0.20.0",
-		"react-hook-form": "^7.50.1",
 		"react-router-dom": "^6.22.1",
-		"styled-components": "^6.1.8",
-		"xlsx": "^0.18.5",
-		"zod": "^3.22.4"
+		"styled-components": "^6.1.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
