--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"jwt-decode": "^4.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.53.0",
 		"react-router-dom": "^6.22.1",
 		"styled-components": "^6.1.8"
 	},
