--- a/package.json
+++ b/package.json
@@ -10,32 +10,34 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@ant-design/icons": "^5.3.0",
-		"@apollo/client": "^3.9.5",
+		"@ant-design/icons": "^5.5.2",
+		"@apollo/client": "^3.12.4",
 		"@apollo/react-hooks": "^4.0.0",
-		"@hookform/resolvers": "^3.3.4",
-		"@vis.gl/react-google-maps": "^0.7.0",
-		"antd": "^5.14.1",
+		"@hookform/resolvers": "^3.9.1",
+		"@vis.gl/react-google-maps": "^1.4.2",
+		"antd": "^5.22.7",
 		"axios": "^1.7.9",
-		"jspdf": "^2.5.1",
-		"jspdf-autotable": "^3.8.3",
+		"jspdf": "^2.5.2",
+		"jspdf-autotable": "^3.8.4",
 		"jwt-decode": "^4.0.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-hook-form": "^7.53.0",
-		"react-router-dom": "^6.22.1",
-		"styled-components": "^6.1.8"
+		"npm-check-updates": "^17.1.12",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
+		"react-router-dom": "^7.1.1",
+		"styled-components": "^6.1.13"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.8.3",
+		"@ant-design/v5-patch-for-react-19": "^1.0.3",
+		"@biomejs/biome": "1.9.4",
 		"@rocketseat/eslint-config": "^2.2.2",
-		"@types/react": "^18.2.55",
-		"@types/react-dom": "^18.2.19",
-		"@vitejs/plugin-react": "^4.2.1",
-		"eslint": "^8.57.0",
-		"eslint-plugin-react": "^7.33.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.5",
-		"vite": "^5.1.0"
+		"@types/react": "^19.0.2",
+		"@types/react-dom": "^19.0.2",
+		"@vitejs/plugin-react": "^4.3.4",
+		"eslint": "^9.17.0",
+		"eslint-plugin-react": "^7.37.3",
+		"eslint-plugin-react-hooks": "^5.1.0",
+		"eslint-plugin-react-refresh": "^0.4.16",
+		"vite": "^6.0.6"
 	}
 }
