nova rota CREATE_REPORT

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@vis.gl/react-google-maps": "^1.4.2",
 		"antd": "^5.22.7",
 		"axios": "^1.7.9",
+		"cuid": "^3.0.0",
 		"jspdf": "^2.5.2",
 		"jspdf-autotable": "^3.8.4",
 		"jwt-decode": "^4.0.0",
