--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
-
 {
-    "rewrites": [
-        {"source": "/(.*)", "destination": "/"}
-    ]
+	"rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
-
